Fix Double Overflow

--- a/static/css/index.css
+++ b/static/css/index.css
@@ -71,7 +71,7 @@ body {
   background-image: url(/bg.png);
   background-repeat: no-repeat;
   text-align: center;
-  margin-top: -4%;
+  overflow: hidden;
 }
 
 #imgsearch {
